--- a/Mobile Development/app/src/main/res/layout/activity_change_password.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_change_password.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_fragment_activity"
+    style="@style/background_style"
     tools:context=".ui.changepassword.ChangePasswordActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -41,11 +41,9 @@
         app:layout_constraintTop_toBottomOf="@id/label_current_password">
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/input_text"
             android:id="@+id/current_password_input"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textPassword"
-            android:textSize="14sp" />
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -67,20 +65,15 @@
         app:layout_constraintTop_toBottomOf="@+id/label_new_password">
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/input_text"
             android:id="@+id/new_password_input"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textPassword"
-            android:textSize="14sp" />
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        style="@style/text_new_password_format"
         android:id="@+id/new_password_format"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="24dp"
         android:text="@string/new_password_format"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
