--- a/Mobile Development/app/src/main/res/layout-land/activity_onboarding_page.xml
+++ b/Mobile Development/app/src/main/res/layout-land/activity_onboarding_page.xml
@@ -5,11 +5,12 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    style="@style/background_style"
     app:layoutDescription="@xml/activity_onboarding_page_scene_landscape"
     tools:context="ui.onboardingpage.OnboardingPageActivity">
 
     <TextView
+        style="@style/title_menu_onboarding"
         android:id="@+id/skip_menu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,9 +18,6 @@
         android:layout_marginEnd="28dp"
         android:letterSpacing="0.05"
         android:text="@string/skip"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,20 +34,19 @@
         app:layout_constraintVertical_bias="0.5" />
 
     <TextView
+        style="@style/title_menu_onboarding"
         android:id="@+id/title_menu_page1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:gravity="center_horizontal"
         android:text="@string/title_menu_1"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical"
         app:layout_constraintTop_toTopOf="@id/guideline_horizontal1"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
+        style="@style/desc_menu_onboarding"
         android:id="@+id/desc_menu_page1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -58,8 +55,6 @@
         android:gravity="center_horizontal"
         android:text="@string/description_menu_1"
         android:textAlignment="center"
-        android:textColor="@color/text_gray"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/title_menu_page1"
         app:layout_constraintStart_toStartOf="@id/title_menu_page1"
         app:layout_constraintTop_toBottomOf="@id/title_menu_page1" />
@@ -77,19 +72,18 @@
         app:layout_constraintVertical_bias="0.5" />
 
     <TextView
+        style="@style/title_menu_onboarding"
         android:id="@+id/title_menu_page2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:gravity="center_horizontal"
         android:text="@string/title_menu_2"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline_horizontal1"/>
 
     <TextView
+        style="@style/desc_menu_onboarding"
         android:id="@+id/desc_menu_page2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -97,8 +91,6 @@
         android:layout_marginTop="12dp"
         android:gravity="center_horizontal"
         android:text="@string/description_menu_2"
-        android:textColor="@color/text_gray"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/title_menu_page2"
         app:layout_constraintStart_toStartOf="@id/title_menu_page2"
         app:layout_constraintTop_toBottomOf="@id/title_menu_page2" />
@@ -116,19 +108,18 @@
         app:layout_constraintVertical_bias="0.5" />
 
     <TextView
+        style="@style/title_menu_onboarding"
         android:id="@+id/title_menu_page3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:gravity="center_horizontal"
         android:text="@string/title_menu_3"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline_horizontal1" />
 
     <TextView
+        style="@style/desc_menu_onboarding"
         android:id="@+id/desc_menu_page3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -136,44 +127,39 @@
         android:layout_marginTop="12dp"
         android:gravity="center_horizontal"
         android:text="@string/description_menu_3"
-        android:textColor="@color/text_gray"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/title_menu_page3"
         app:layout_constraintStart_toStartOf="@id/title_menu_page3"
         app:layout_constraintTop_toBottomOf="@id/title_menu_page3" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
+        style="@style/icon_menu_onboarding"
         android:id="@+id/menu1"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginEnd="16dp"
-        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintBottom_toBottomOf="@id/menu2"
         app:layout_constraintEnd_toStartOf="@id/menu2"
-        app:layout_constraintTop_toTopOf="@id/menu2"
-        app:srcCompat="@drawable/ic_circle_full_2" />
+        app:layout_constraintTop_toTopOf="@id/menu2" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
+        style="@style/icon_menu_onboarding"
         android:id="@+id/menu2"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginTop="24dp"
-        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical2"
-        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2"
-        app:srcCompat="@drawable/ic_circle_full_2" />
+        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
+        style="@style/icon_menu_onboarding"
         android:id="@+id/menu3"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginStart="16dp"
-        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintBottom_toBottomOf="@id/menu2"
         app:layout_constraintStart_toEndOf="@id/menu2"
-        app:layout_constraintTop_toTopOf="@id/menu2"
-        app:srcCompat="@drawable/ic_circle_full_2" />
+        app:layout_constraintTop_toTopOf="@id/menu2" />
 
     <Button
         android:id="@+id/btn_signup_onboarding_page"
@@ -184,8 +170,6 @@
         android:layout_marginEnd="24dp"
         android:letterSpacing="0.05"
         android:text="@string/signup"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:alpha="0"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical"
@@ -200,8 +184,6 @@
         android:layout_marginEnd="24dp"
         android:letterSpacing="0.05"
         android:text="@string/login"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:alpha="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical2"
