--- a/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.chatbot.ChatbotActivity"
-    android:background="@color/background_fragment_activity">
+    style="@style/background_style">
 
     <com.google.android.material.appbar.AppBarLayout
         style="@style/custom_toolbar_layout"
@@ -23,12 +23,9 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
+        style="@style/time_information"
         android:id="@+id/time_info"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:textAlignment="center"
-        android:textColor="@color/text_gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appbar_layout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,10 +61,8 @@
             app:layout_constraintEnd_toStartOf="@id/send_message_button">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/message_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="14sp" />
+                style="@style/input_text"
+                android:id="@+id/message_input" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
