--- a/Mobile Development/app/src/main/res/layout/activity_main.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/container_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    style="@style/background_style">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/container_bottom_navigation"
