--- a/Mobile Development/app/src/main/res/layout/activity_register.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_color"
+    style="@style/background_style2"
     tools:context=".ui.register.RegisterActivity">
 
     <TextView
@@ -16,16 +16,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        style="@style/card_login_register"
         android:id="@+id/card_register"
-        android:layout_width="match_parent"
         android:layout_height="550dp"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="-15dp"
-        android:padding="16dp"
         android:paddingBottom="0dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -52,10 +49,8 @@
                 app:startIconDrawable="@drawable/user_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/textInput_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="14sp" />
+                    style="@style/input_text"
+                    android:id="@+id/textInput_username" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -75,10 +70,8 @@
                 app:startIconDrawable="@drawable/email_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/text_input_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="14sp" />
+                    style="@style/input_text"
+                    android:id="@+id/text_input_email" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -99,11 +92,9 @@
                 app:startIconDrawable="@drawable/password_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    style="@style/input_text"
                     android:id="@+id/text_input_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textPassword"
-                    android:textSize="14sp" />
+                    android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
