--- a/Mobile Development/app/src/main/res/layout/filter_dialog.xml
+++ b/Mobile Development/app/src/main/res/layout/filter_dialog.xml
@@ -13,7 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        style="@style/background_style">
 
         <TextView
             android:id="@+id/label_filter_dialog"
