--- a/Mobile Development/app/src/main/res/layout/fragment_history_chatbot.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_history_chatbot.xml
@@ -8,18 +8,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_fragment_activity"
-        tools:context="ui.historychatbot.HistoryChatbotFragment">
+        tools:context="ui.historychatbot.HistoryChatbotFragment"
+        style="@style/background_style">
 
         <com.google.android.material.appbar.AppBarLayout
+            style="@style/custom_toolbar_layout"
             android:id="@+id/appbar_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/white">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.appbar.MaterialToolbar
                 style="@style/custom_toolbar"
