--- a/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_fragment_activity">
+        style="@style/background_style">
 
         <com.google.android.material.appbar.AppBarLayout
             style="@style/custom_toolbar_layout"
@@ -26,15 +26,9 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
+            style="@style/label_your_clothes"
             android:id="@+id/label_your_clothes_collection"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
             android:text="@string/your_clothes_collection"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/appbar_layout" />
 
