--- a/Mobile Development/app/src/main/res/layout/fragment_profile.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_fragment_activity">
+    style="@style/background_style">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,14 +12,12 @@
         tools:context=".ui.profile.ProfileFragment">
 
         <com.google.android.material.appbar.AppBarLayout
+            style="@style/custom_toolbar_layout"
             android:id="@+id/appbar_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/white">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.appbar.MaterialToolbar
                 style="@style/custom_toolbar"
@@ -132,46 +130,6 @@
                     app:layout_constraintBottom_toBottomOf="@+id/language_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/language_text" />
-
-                <View
-                    style="@style/path_settings"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/notification_settings"
-                android:layout_width="match_parent"
-                android:layout_height="60dp">
-
-                <ImageView
-                    style="@style/icon_item_settings"
-                    android:id="@+id/Notification_icon"
-                    android:padding="8dp"
-                    android:src="@drawable/notification_settings"
-                    android:contentDescription="@string/notification_settings_icon"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
-
-                <TextView
-                    style="@style/label_item_settings"
-                    android:id="@+id/Notification_text"
-                    android:text="@string/notification"
-                    app:layout_constraintBottom_toBottomOf="@+id/Notification_icon"
-                    app:layout_constraintStart_toEndOf="@+id/Notification_icon"
-                    app:layout_constraintTop_toTopOf="@+id/Notification_icon" />
-
-                <com.google.android.material.switchmaterial.SwitchMaterial
-                    android:id="@+id/switch1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/Notification_text"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/Notification_text" />
 
                 <View
                     style="@style/path_settings"
