--- a/Mobile Development/app/src/main/res/layout/item_chatbot_history.xml
+++ b/Mobile Development/app/src/main/res/layout/item_chatbot_history.xml
@@ -7,13 +7,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        style="@style/chat_title_history"
         android:id="@+id/chat_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         tools:text="Chat1"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
