--- a/Mobile Development/app/src/main/res/layout/item_chatbot_message.xml
+++ b/Mobile Development/app/src/main/res/layout/item_chatbot_message.xml
@@ -10,7 +10,7 @@
         android:id="@+id/chatbot_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/icon_container"
+        android:backgroundTint="@color/icon_container"
         app:cardCornerRadius="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,18 +24,9 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        style="@style/chatbot_text"
         android:id="@+id/chatbot_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:background="@drawable/custom_chat_bot"
-        android:backgroundTint="@color/container_gray"
-        android:paddingStart="20dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="16dp"
-        android:textColor="@color/black"
-        android:textSize="14sp"
         tools:text="Lorem ipsum dolor sit amet"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/chatbot_image"
@@ -69,25 +60,15 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        style="@style/user_text"
         android:id="@+id/user_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_chat_user"
-        android:backgroundTint="@color/primary_color"
-        android:paddingStart="20dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="16dp"
-        android:textColor="@color/white"
-        android:textSize="14sp"
         android:textAlignment="textEnd"
         tools:text="Lorem ipsum dolor sit amet"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
         app:layout_constraintEnd_toStartOf="@id/user_image"
         app:layout_constraintHorizontal_bias="1"/>
-
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical1"
@@ -97,8 +78,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintGuide_percent="0.3"
         app:layout_constraintStart_toStartOf="parent" />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
