--- a/Mobile Development/app/src/main/res/values/colors.xml
+++ b/Mobile Development/app/src/main/res/values/colors.xml
@@ -3,8 +3,13 @@
     <color name="primary_color">#4FACFE</color>
     <color name="darker_primary_color">#0F89F8</color>
     <color name="not_active_color">#515151</color>
+    <color name="not_active_color_dark">#DADFE7</color>
+    <color name="active_color_dark">#BAD7FF</color>
     <color name="menu_container">#DEEFFF</color>
+    <color name="menu_container_dark">#33618D</color>
     <color name="background_fragment_activity">#F8FBFF</color>
+    <color name="background_dark">#3B4857</color>
+    <color name="desc_color">#E7E7E7</color>
     <color name="icon_container">#F2F8FF</color>
     <color name="black">#FF000000</color>
     <color name="dark_shadow">#4D000000</color>
@@ -20,4 +25,7 @@
     <color name="transparent">#F8F9FD</color>
     <color name="field_disabled">#66BEDFFA</color>
     <color name="text_disabled">#2C5478</color>
+    <color name="button_dark">#626B77</color>
+    <color name="chatbot_container">#F2F4F5</color>
+    <color name="input_disabled_layout">#C3D3E9</color>
 </resources>
