--- a/Mobile Development/app/src/main/res/layout/item_clothes_list.xml
+++ b/Mobile Development/app/src/main/res/layout/item_clothes_list.xml
@@ -17,8 +17,8 @@
 
         <ImageView
             android:id="@+id/clothes_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
             android:contentDescription="@string/clothes_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,11 +36,14 @@
             style="@style/item_clothes_label_container"
             android:id="@+id/card_label_clothes1"
             android:layout_marginBottom="16dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@id/clothes_name"
             app:layout_constraintEnd_toEndOf="@id/clothes_name"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/clothes_name"
+            android:alpha="0">
 
             <TextView
+                android:id="@+id/label1"
                 style="@style/item_clothes_label_text"
                 tools:text="label1" />
         </com.google.android.material.card.MaterialCardView>
@@ -48,12 +51,14 @@
         <com.google.android.material.card.MaterialCardView
             style="@style/item_clothes_label_container"
             android:id="@+id/card_label_clothes2"
-            android:layout_marginStart="12dp"
-            app:layout_constraintTop_toTopOf="@id/card_label_clothes1"
-            app:layout_constraintBottom_toBottomOf="@id/card_label_clothes1"
-            app:layout_constraintStart_toEndOf="@id/card_label_clothes1">
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="@id/card_label_clothes1"
+            app:layout_constraintEnd_toEndOf="@id/card_label_clothes1"
+            app:layout_constraintTop_toBottomOf="@id/card_label_clothes1"
+            android:alpha="0">
 
             <TextView
+                android:id="@+id/label2"
                 style="@style/item_clothes_label_text"
                 tools:text="label2" />
         </com.google.android.material.card.MaterialCardView>
