--- a/Mobile Development/app/src/main/res/layout/item_clothes_list.xml
+++ b/Mobile Development/app/src/main/res/layout/item_clothes_list.xml
@@ -6,6 +6,7 @@
     android:layout_gravity="center"
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
+    android:layout_marginHorizontal="8dp"
     android:padding="16dp"
     android:elevation="8dp"
     app:cardCornerRadius="12dp">
