--- a/Mobile Development/app/src/main/res/values-night/themes.xml
+++ b/Mobile Development/app/src/main/res/values-night/themes.xml
@@ -557,7 +557,7 @@
     <style name="chat_title_history">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
