--- a/Mobile Development/app/src/main/res/layout/fragment_history_chatbot.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_history_chatbot.xml
@@ -33,6 +33,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="16dp"
+            android:paddingBottom="80dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/appbar_layout"
