Feat: Create Message History

--- a/Mobile Development/app/src/main/res/drawable/right_icon_24.xml
+++ b/Mobile Development/app/src/main/res/drawable/right_icon_24.xml
@@ -2,6 +2,7 @@
     android:width="7dp"
     android:height="10dp"
     android:viewportWidth="7"
+    android:tint="?attr/colorControlNormal"
     android:viewportHeight="10">
   <path
       android:pathData="M1.108,9.978C1.324,9.978 1.501,9.9 1.645,9.756L5.889,5.611C6.078,5.423 6.172,5.229 6.172,4.992C6.172,4.754 6.083,4.554 5.889,4.372L1.645,0.221C1.495,0.077 1.318,0 1.108,0C0.682,0 0.333,0.343 0.333,0.769C0.333,0.979 0.422,1.179 0.577,1.334L4.34,4.992L0.577,8.644C0.422,8.799 0.333,8.998 0.333,9.208C0.333,9.634 0.682,9.978 1.108,9.978Z"
