--- a/Mobile Development/app/src/main/res/layout/item_chatbot_history.xml
+++ b/Mobile Development/app/src/main/res/layout/item_chatbot_history.xml
@@ -28,13 +28,15 @@
 
     <TextView
         android:id="@+id/chat_time"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         tools:text="July 10, 05.22 PM"
         app:layout_constraintTop_toBottomOf="@id/chat_title"
         app:layout_constraintBottom_toTopOf="@id/chat_message"
-        app:layout_constraintEnd_toStartOf="@id/arrow_to_chat"/>
+        app:layout_constraintEnd_toStartOf="@id/arrow_to_chat"
+        app:layout_constraintStart_toEndOf="@id/chat_message"
+        app:layout_constraintHorizontal_bias="1"/>
 
     <ImageView
         android:id="@+id/arrow_to_chat"
