--- a/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
@@ -90,4 +90,17 @@
         app:layout_constraintGuide_percent="0.922"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/loading_chatbot"
+        style="?attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
