--- a/Mobile Development/app/src/main/res/layout/item_chatbot_message.xml
+++ b/Mobile Development/app/src/main/res/layout/item_chatbot_message.xml
@@ -7,22 +7,6 @@
     android:layout_marginBottom="24dp"
     android:layout_marginHorizontal="4dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/chatbot_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/icon_container"
-        app:cardCornerRadius="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/chatbot_message">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:contentDescription="@string/chatbot_image"
-            android:src="@drawable/chatbot_menu_icon" />
-    </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical2"
@@ -32,23 +16,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintGuide_percent="0.7"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/user_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/user_image"
-            tools:src="@drawable/user_profile_image"
-            tools:layout_width="32dp"
-            tools:layout_height="32dp"/>
-    </androidx.cardview.widget.CardView>
 
     <TextView
         style="@style/user_text"
@@ -65,7 +32,7 @@
         android:paddingEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
-        app:layout_constraintEnd_toStartOf="@id/user_image"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
         tools:text="Lorem ipsum dolor sit amet lorem ipsum dolor si amet" />
 
@@ -82,9 +49,9 @@
         android:paddingEnd="16dp"
         android:background="@drawable/custom_chat_bot"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@id/chatbot_image"
         tools:text="Lorem ipsum dolor sit amet" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -95,7 +62,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="12dp"
         android:paddingBottom="16dp"
-        android:paddingStart="16dp"
+        android:paddingStart="8dp"
         android:paddingEnd="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/custom_chat_bot"
@@ -103,12 +70,14 @@
         app:layout_constraintTop_toBottomOf="@id/chatbot_message"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@id/chatbot_image">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingEnd="64dp"
+            android:paddingStart="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
