feat: Adding delete chat feature

--- a/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_chatbot.xml
@@ -18,7 +18,7 @@
         <com.google.android.material.appbar.MaterialToolbar
             style="@style/custom_toolbar"
             android:id="@+id/topAppBar"
-            app:menu="@menu/appbar_menu" />
+            app:menu="@menu/appbar_menu_chatbot" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
