--- a/Mobile Development/app/src/main/res/menu/appbar_menu_chatbot.xml
+++ b/Mobile Development/app/src/main/res/menu/appbar_menu_chatbot.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
-    android:id="@+id/search_event"
+    android:id="@+id/delete_chat"
     android:icon="@drawable/delete_icon"
     app:showAsAction="ifRoom"
     android:title="@string/delete_chat" />
